# CDiskCleaner

./: .gitignore  README.md
data/: schema.sql  seed.sql
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cleanup.rs  db.rs  main.rs  models.rs  privilege.rs  rules.rs  scan.rs  settings.rs
ui/: app.js  index.html  styles.css
