[package]
name = "cdiskcleaner"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tauri = { version = "1", features = ["api-all"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
